Some minor changes to index.html and README

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -62,12 +62,12 @@
       </div>
     </div>
 
-    <div class="container" id="posts">
+    <div class="container" id="maincontent">
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div id="nopost" class="jumbotron">
-        <h1>No Articles</h1>
-        <p>This site does not appear to contain any articles yet. Maybe check back later?</p>
+      <div id="homediv" class="jumbotron">
+        <h1>Whatever you wish to say on your homepage</h1>
+        <p>Welcome to my site!</p>
       </div>
     </div> <!-- /container -->
 
