--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -33,12 +33,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Site Name</a>
+          <a class="navbar-brand homelink" href="#">Site Name</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#contents/alpha">Contents</a></li>
-            <li><a href="#title/about">About</a></li>
+          <ul id="topnavul" class="nav navbar-nav">
+            <li id="contentsli" class="navli"><a id="contentstopnav" href="#contents/alpha">Contents</a></li>
+            <li id="aboutli" class="navli"><a id="abouttopnav" href="#title/about">About</a></li>
             <li><a href="mailto:someone@somewhere.com">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -62,13 +62,14 @@
       </div>
     </div>
 
-    <div class="container" id="maincontent">
+    <div class="container" id="contentdiv">
 
-      <!-- Main component for a primary marketing message or call to action -->
+      <!-- home page div -->
       <div id="homediv" class="jumbotron">
         <h1>Whatever you wish to say on your homepage</h1>
         <p>Welcome to my site!</p>
       </div>
+
     </div> <!-- /container -->
 
 
