--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -62,12 +62,16 @@
       </div>
     </div>
 
-    <div class="container" id="contentdiv">
+    <div class="container" id="maindiv">
 
       <!-- home page div -->
       <div id="homediv" class="jumbotron">
         <h1>Whatever you wish to say on your homepage</h1>
         <p>Welcome to my site!</p>
+      </div>
+      <!-- content page div -->
+      <div id="contentsdiv" style="display:none" class="jumbotron">
+        <h1>Contents</h1>
       </div>
 
     </div> <!-- /container -->
