Added about function. Changed active highlighting to be called from dispatcher instead of based on clicks.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -38,7 +38,7 @@
         <div class="navbar-collapse collapse">
           <ul id="topnavul" class="nav navbar-nav">
             <li id="contentsli" class="navli"><a id="contentstopnav" href="#contents/alpha">Contents</a></li>
-            <li id="aboutli" class="navli"><a id="abouttopnav" href="#title/about">About</a></li>
+            <li id="aboutli" class="navli"><a id="abouttopnav" href="#about">About</a></li>
             <li><a href="mailto:someone@somewhere.com">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -65,12 +65,12 @@
     <div class="container" id="maindiv">
 
       <!-- home page div -->
-      <div id="homediv" class="jumbotron">
+      <div id="homediv" class="jumbotron hideonchange">
         <h1>Whatever you wish to say on your homepage</h1>
         <p>Welcome to my site!</p>
       </div>
       <!-- content page div -->
-      <div id="contentsdiv" style="display:none" class="jumbotron">
+      <div id="contentsdiv" style="display:none" class="jumbotron hideonchange">
         <h1>Contents</h1>
       </div>
 
