Implemented posts page. Am not satisfied with the result because the title is not displayed. Need to preprocess the data from index.json.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -73,6 +73,11 @@
       <div id="contentsdiv" style="display:none" class="jumbotron hideonchange">
         <h1>Contents</h1>
       </div>
+      <!-- post page div -->
+      <div id="postsdiv" style="display:none" class="jumbotron hideonchange">
+        
+      </div>
+
 
     </div> <!-- /container -->
 
