Abstracted getting to level and breadcrumbs so posts page can also use them.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul id="topnavul" class="nav navbar-nav">
-            <li id="contentsli" class="navli"><a id="contentstopnav" href="#contents/alpha">Contents</a></li>
+            <li id="contentsli" class="navli"><a id="contentstopnav" href="#contents">Contents</a></li>
             <li id="aboutli" class="navli"><a id="abouttopnav" href="#about">About</a></li>
             <li><a href="mailto:someone@somewhere.com">Contact</a></li>
             <li class="dropdown">
